--- a/src/components/CommentForm.module.css
+++ b/src/components/CommentForm.module.css
@@ -2,15 +2,25 @@
   margin-top: 10px;
 }
 
-.textarea {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
+.textareaWrapper {
+  display: flex;
+  align-items: center;
+  background-color: white;
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 50px;
+  padding: 8px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.textarea {
+  flex-grow: 1;
+  resize: none;
+  outline: none;
   font-size: 14px;
-  resize: vertical;
-  min-height: 60px;
+  border: none;
+  padding: 10px;
+  border-radius: 4px;
+  min-height: 40px;
 }
 
 .button {
@@ -18,12 +28,25 @@
   color: white;
   border: none;
   padding: 5px 10px;
-  border-radius: 4px;
+  border-radius: 100%;
   cursor: pointer;
   font-size: 14px;
+  transition: all 0.3s ease-in-out;
+  
 }
 
 .button:hover {
   background-color: #3a7bc8;
 }
 
+.disabledButton {
+  background-color: #ddd;
+  cursor: not-allowed;
+}
+
+.characterCount {
+  text-align: right;
+  font-size: 12px;
+  color: #999;
+  margin-top: 5px;
+}
